@@ -1,0 +1,8 @@
+<?php
+return array(
+	'tx_ncstaticfilecache_tasks_processdirtypages' => t3lib_extMgm::extPath('nc_staticfilecache', 'tasks/class.tx_ncstaticfilecache_tasks_processDirtyPages.php'),
+	'tx_ncstaticfilecache_tasks_processdirtypages_additionalfieldprovider' => t3lib_extMgm::extPath('nc_staticfilecache', 'tasks/class.tx_ncstaticfilecache_tasks_processDirtyPages_AdditionalFieldProvider.php'),
+	'tx_ncstaticfilecache_tasks_removeexpiredpages' => t3lib_extMgm::extPath('nc_staticfilecache', 'tasks/class.tx_ncstaticfilecache_tasks_removeExpiredPages.php'),
+	'tx_ncstaticfilecache_tasks_removeexpiredpages_additionalfieldprovider' => t3lib_extMgm::extPath('nc_staticfilecache', 'tasks/class.tx_ncstaticfilecache_tasks_removeExpiredPages_AdditionalFieldProvider.php'),
+);
+?>
